# ros2_ws

Introducing the robot/robot/: README.md
camera1/: camera1.hwp
line_dection_sub/: CMakeLists.txt  sub_node.cpp
linedetect_pub_5/: CMakeLists.txt  README.md  package.xml  pub_node.cpp
linedetect_pub_7/: CMakeLists.txt  README.md  package.xml  pub_7.cpp
linedetect_sub_5/: README.md  package.xml
linedetect_sub_7/: CMakeLists.txt  README.md  package.xml  sub_7.cpp
linedetection/linedetect_nano/: CMakeLists.txt  package.xml
linedetection/linedetect_nano/src/: pub.cpp
linedetection/linedetect_wsl/: CMakeLists.txt  package.xml
linedetection/linedetect_wsl/src/: sub.cpp
pub2/: CMakeLists.txt  package.xml
pub2/src/: pub.cpp
rclccp-3/psub1/: CMakeLists.txt  package.xml
rclccp-3/psub1-2/: CMakeLists.txt  package.xml
rclccp-3/psub1-2/src/: pub1-2.cpp  sub1-2.cpp
rclccp-3/psub1/src/: pub.cpp  sub.cpp
