<?xml version="1.0"?>
<package format="3">
  <name>linedetect_pub</name>
  <version>0.0.0</version>
  <description>Video publisher for line detection</description>

  <maintainer email="kjw2001174@gmail.com">linux</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
